--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8080;
+    listen ${PORT};
     gzip on;
     gzip_disable "msie6";
     gzip_types application/javascript text/css application/x-javascript text/plain text/xml application/xml application/xml+rss image/jpg image/jpeg image/gif image/svg+xml application/json text/javascript;
