--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         run: |
+          echo 123
           heroku container:login
           heroku container:push -a deploy-frontend-app web
           heroku container:release -a deploy-frontend-app web 
